--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "name": "project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0"
   },
@@ -12,6 +14,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "David Tsang",
   "license": "ISC"
 }
